<resources>
    <string name="app_name">Barbershop Service Booking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cd_previous">Previous</string>
    <string name="cd_next">Next</string>
    <string name="cancel_dialog">Do you want to cancel booking?</string>
    <string name="cancel_dialog_title">Cancel Booking!</string>
    <string name="bookID">bookID</string>
    <string name="barberName">Barber Name:</string>
    <string name="barberServiceName">Barber Services:</string>
    <string name="bookDate">book date</string>
    <string name="bookTime">Time</string>
    <string name="bookStatus">Status</string>
    <string name="barberServicePrice">Price:</string>
    <string name="Duration">Estimate Duration:</string>
    <string name="Sales">Sales</string>
    <string name="Performance">Performance</string>


    <string-array name="card_array">
        <item>Master Card</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
    </string-array>
</resources>