<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".customer.customerHistoryDetailsFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textViewBookid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/bookID"
                android:visibility="gone"/>



            <TableRow
                android:id="@+id/tableTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:id="@id/textView1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/barberName"
                    android:maxWidth="250dp"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/bookStatus"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_view"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/bookStatus"
                    android:textSize="20sp" />
            </TableRow>

            <TextView
                android:id="@+id/textViewBarbername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableTop"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:maxWidth="250dp"
                android:text="@string/barberName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewBarbername"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/barberServiceName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewBarberServicename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/barberServiceName"
                android:textSize="20sp" />

            <TableRow
                android:id="@+id/tableDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewBarberServicename"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:id="@+id/bookDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookDate"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/bookTime"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableDateTime"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Duration"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/Duration"
                    android:textSize="20sp" />
            </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableDuration"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/barberServicePrice"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewBarberServiceTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/barberServicePrice"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/qrCodeImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@+id/textViewBarberServiceTotalPrice"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <Button
                android:id="@+id/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qrCodeImage"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                android:text="Review"/>

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qrCodeImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="Payment" />



            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </RelativeLayout>

    </FrameLayout>
</ScrollView>